# Elegoo-AI-Robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
.github/workflows/: main.yml
USBHostSerial/: USBHostSerial.h
main/: CMakeLists.txt  Kconfig.projbuild  USBHostSerial.cpp  detection_responder.cc  idf_component.yml  image_provider.cc  main.cpp  main_functions.cc
main/USBserial/: USBHostSerial.cpp
main/core/: main.cc  main_functions.cc  main_functions.h  model_init.cc  model_init.h
main/esp/: detection_responder.cc  detection_responder.h  esp_cli.c  esp_cli.h  esp_main.h
main/esp/audio/: audio_provider.cc  audio_provider.h  audio_responder.cc  audio_responder.h
main/esp/camera/: app_camera_esp.c  elegoo_camera_pins.h  image_provider.cc  image_provider.h
main/models/: model_settings.cc  model_settings.h
main/models/audio_model/: audio_model.tflite  labels.txt
